fixed spacing on about-me

--- a/assets/styles/about.css
+++ b/assets/styles/about.css
@@ -3,6 +3,7 @@ body {
     /* height: 100vh; */
     margin: 0px;
     /* overflow: hidden; */
+    overflow-x: hidden;
 }
 
 /* #root {
@@ -117,13 +118,13 @@ a:hover {
     margin-top: 0px;
     display: flex;
     flex-direction: row;
-    height: 67.5%;
+    /* height: 67.5%; */
 }
 
 .container {
     display: flex;
     /* overflow: hidden; */
-    height: 100%;
+    /* height: 100%; */
 }
 
 #left {
@@ -148,21 +149,28 @@ a:hover {
     line-height: 1.6;
 }
 
-#photo {
+/* #photo {
     height: 100%;
     margin-left: 90px;
-}
+} */
 
 .social {
-    position: absolute;
+    /* position: absolute;
     bottom: 10px;
-    right: 0px;
-    margin-right: 220px;
+    right: 0px; */
+    /* position: relative; */
+    /* margin-right: 220px; */
+    /* padding-left: 220px; */
+    margin-top: 5px;
+    width: 100vw;
+}
+
+#social-wrapper {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: flex-end;
-    width: 100vw;
+    margin-right: 220px;
 }
 
 .icon {
@@ -214,7 +222,8 @@ CAROUSEL STUFF
     /* width: 600px; */
     margin: 0;
     /* margin-top: 5%; */
-    height: 100%;
+    /* height: 100%; */
+    height: 617.625px;
     margin-left: 90px;
 }
 
